#fix -- horizontal overflow

--- a/styles/default.sass
+++ b/styles/default.sass
@@ -8,7 +8,9 @@
 html
   box-sizing: border-box
   height: 100vh
+  width: 100vw
   overflow-y: scroll
+  overflow-x: hidden
   scroll-behavior: smooth
 
 *, *::before, *::after
